# alpha_engine

./: .dockerignore  .env.development.example  .env.example  .env.production.example  .geminiignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTEXT.md  DESIGN.md  Dockerfile  Dockerfile.api  EVALUATE.md  Makefile  README.md  REFACTORING.md  TASKS.md  api_server.py  check_traceback.py  cli.py  debug_trace.txt  diff_proof.md  docker-compose.yaml  docker-compose.yml  ecosystem.config.js  ecosystem.config.json  evaluation.md  pm2_launcher.js  pm2_launcher.pyw  pm2_launcher_hidden.vbs  pr_verification.md  pyproject.toml  requirements.txt  run.py  scratch.txt  test_copilot.cjs  us  validate_all.ps1
.github/workflows/: apply-issue-128-migration.yml  (+28 more)
.playwright-cli/: page-2026-03-01T06-12-01-958Z.yml  page-2026-03-01T06-12-10-974Z.yml  page-2026-03-01T09-12-09-475Z.yml  page-2026-03-01T17-43-05-955Z.yml  page-2026-03-01T17-45-47-870Z.yml  page-2026-03-01T17-53-45-671Z.yml
Workflows/: trading_execution_bus.workflow.md
agents/: README.md
configs/: cn_5d_return_workflow.yaml  cn_benchmark_excess_workflow.yaml  cn_enhanced_plus_workflow.yaml  cn_equal_weight_workflow.yaml  cn_excess_73.yaml  cn_excess_mean_workflow.yaml  cn_lgbm_workflow.yaml  cn_linear_workflow.yaml  cn_long_train_workflow.yaml  cn_rank_workflow.yaml  cn_short_train_workflow.yaml  cn_workflow.yaml  cn_xgb_workflow.yaml  data_router_policy.yaml  factor_pool.yaml  name_map.yaml  strategy_profile_cn.json  strategy_profile_generated.json  strategy_profile_quant_rating_us.json  strategy_profile_us.json  us_lgbm_regressor_10d_workflow.yaml  us_lgbm_workflow.yaml  us_lgbm_workflow_with_factors_us_20260608.yaml  us_lgbm_workflow_with_factors_us_20260609.yaml  us_workflow.yaml  us_xgb_workflow.yaml  watchlist.yaml
core/: backtester.py  parser.py  reporter.py
docs/: 10d_model_decision_pack.md  10d_universe_robustness_report.md  PROJECT_COMPLETION_2026-07-13.md  PROJECT_HANDOFF_2026-07-13.md  STRATEGY_AUDIT_AND_MODEL_EXPLORATION.md  cn_feature_quality_validation.md  data_coverage_alignment.md  methodology.md  model_training_experience.md  model_training_guide.md  multi_market_readiness_and_cn_validation.md  notebook_10d_research_lab.md  product_vision.md  real_market_research_runbook.md  structured_10d_research_paradigm.md  ten_day_model_gates.md
frontend/: package-lock.json  package.json
notebooks/: 00_data_download_and_sync.ipynb  01_factor_research.ipynb  02_signal_validation.ipynb  02_strategy_validation.ipynb  03_topk_spread_research.ipynb  03_topn_spread_research.ipynb  04_winner_bucket_research.ipynb  05_model_registry_explorer.ipynb  05_topn_rolling_backtest.ipynb  06_research_playbook.ipynb  06_risk_controlled_momentum_grid.ipynb  07_true_daily_ranker_lab.ipynb  10d_signal_discovery.ipynb  README_notebook_flow.md  _build_pipeline_nb.py  _gen_pipeline_nb.py  _run_cn.py  data_quality_inspection.ipynb  end_to_end_training_pipeline.ipynb
qlib-dashboard/: .eslintrc.cjs  Dockerfile.ui  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  playwright.demo.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
reports/: PR53_CN_MODEL_EFFECTIVENESS_EVIDENCE.md  PR53_MODEL_EFFECTIVENESS_EVIDENCE.md  PR53_TRAINING_EFFECTIVENESS_DIAGNOSTIC.md  RELIABILITY_AUDIT_REPORT.md  biweekly_trend_report.html  cn_interactive_backtest.html  issue_124_real_market_evidence.md  model_strategy_audit_20260404.md  us_interactive_backtest.html  watchlist_report.md
scripts/: README.md  Task_Registry_Candidates_v0.1.md  _harden_canonical_factor_output.py  _harden_oos_adapter_sampling.py  _harden_oos_policy_evidence.py  _materialize_issue124_evidence.py  _patch_canonical_factor_identities.py  _patch_declared_refresh_end.py  _patch_declared_refresh_staging.py  _patch_diagnostic_window_horizon.py  _patch_incomplete_oos_window_policy.py  _patch_issue124_ohlc_tolerance.py  agent_entry.py  analyze_top_bottom.py  apply_issue_128_migration.py  apply_market_provider_runtime_migration.py  archive_snapshots.py  arena_settle.py  benchmark_execution_engine.py  benchmark_optimal_model.py  build_dashboard_db.py  build_market_providers.py  build_model_decision_pack.py  bump_version.py  check_factor_decay.py  check_multi_market_data_readiness.py  check_reproducibility.py  check_static_site.py  cleanup_stuck_jobs.py  collect_data.py  container-entrypoint.sh  container-healthcheck.py  create_universes.py  daily_run.py  debug_jobs.py  debug_runs.py  disk_quota_manager.py  doctor.py  dump_bin.py  e2e_smoke.py  (+63 more)
site/: README.md  app.js  index.html  styles.css
site_legacy/: app.js  index.html
src/: __init__.py  backtest_strategy.py  inference.py  manage_models.py  orchestrator.py
templates/: dashboard.j2
tests/: conftest.py  test_akshare_adapter.py  test_api_contract.py  test_api_release_contracts.py  test_architecture_contract.py  test_arena_daily_report_generation.py  test_arena_index_settle.py  test_artifact_gateway.py  test_artifact_refresh_service.py  test_asset_inspection_service.py  test_backtest_core.py  test_backtest_equity_curve_index.py  test_backtest_equivalence.py  test_backtest_report_generation.py  test_backtest_run_deletion.py  test_backtest_service.py  test_backtest_service_contract.py  test_backtest_service_prefers_profile_snapshot.py  test_backtest_window_defaults.py  test_baostock_adapter_timeout.py  test_benchmark_aware_topk.py  test_biweekly_trend_rules.py  test_candidate_v2_risk_hypotheses.py  test_candidate_v2_universe_robustness.py  test_check_static_site.py  test_cn_feature_quality.py  test_cn_qlib_ci_integration.py  test_cn_qlib_execution_adapter.py  test_container_contract.py  test_core_interfaces.py  test_cross_sectional_training.py  test_daily_ranker_missing_data.py  test_daily_run_contract.py  test_dashboard_artifact_materialization.py  test_dashboard_backtest_job.py  test_dashboard_backtest_runner.py  test_dashboard_data_update_job.py  test_dashboard_data_update_runner.py  test_dashboard_db_builder.py  test_dashboard_db_entrypoint.py  (+179 more)
(+575 files in other folders)
