[project]
name = "trading-assistant"
version = "2.5.0"
description = "AI-powered trading assistant for CN and US markets based on Microsoft Qlib."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyqlib>=0.9.0",
    "typing_extensions>=4.12.2",
    "numpy<2.0.0",
    "pandas",
    "fire",
    "pyyaml",
    "tabulate",
    "scikit-learn",
    "lightgbm",
    "matplotlib",
    "yfinance",
    "plotly",
    "xgboost",
    "baostock",
    "akshare",
    "efinance",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "protobuf<4.0.0",
    "setuptools==69.5.1",
    "slowapi",
    "tiktoken>=0.12.0",
    "pandera",
    "mcp",
    "structlog>=24.1.0",
    "sqlalchemy<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
]

[tool.uv]
managed = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
# Keep the CI lint gate focused on correctness/import hygiene. Pyupgrade (UP)
# is useful, but the existing codebase still has legacy typing syntax that
# should be modernized in a dedicated hardening PR instead of blocking P0 CI.
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src", "scripts", "tests"]

[tool.ruff.lint.per-file-ignores]
# Scripts and agents use sys.path manipulation before imports (E402 deferred).
"scripts/*" = ["E402"]
"tests/*" = ["E402"]
"agents/*" = ["E402"]
# Specific src/ files with legitimate late imports.
"api_server.py" = ["E402"]
"src/api/mcp_server.py" = ["E402"]
"src/inference.py" = ["E402"]
"src/research/service.py" = ["E402"]

# ---------------------------------------------------------------------------
# Mypy — ratcheted scope
# ---------------------------------------------------------------------------
# Strategy: new modules added under src/ must pass mypy without overrides.
# Existing modules with known errors are grandfathered via ignore_errors.
# The critical path (src/release/, src/models/metric_contract.py) is checked
# strictly by CI: ``mypy src/release src/models/metric_contract.py``.
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "src.agents.*",
    "src.api.*",
    "src.assistant.*",
    "src.common.*",
    "src.dashboard.*",
    "src.data.*",
    "src.guardrails.*",
    "src.manage_models",
    "src.models.artifact",
    "src.reliability.*",
    "src.reporting.*",
    "src.research.*",
    "src.strategies.*",
    "src.workflows.*",
    "scripts.*",
]
ignore_errors = true

# ---------------------------------------------------------------------------
# Pytest — zero-unapproved-skip policy
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-markers"
markers = [
    "unit: fast pure unit tests that do not require external services or real market artifacts",
    "contract: API/schema/artifact contract tests using local fakes or TestClient",
    "integration: tests crossing service/module boundaries or requiring heavier fixtures",
    "slow: tests that are valid but too slow for the default PR feedback loop",
    "e2e: browser or live-server end-to-end tests",
    "benchmark: performance or baseline measurement tests; not required for PR correctness",
    "manual: tests requiring local services, real data, credentials, or manual setup",
    "approved_skip(reason): marks a test that is approved to be skipped with a documented reason",
]
